--- a/react/package.json
+++ b/react/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.36.0",
     "autoprefixer": "^10.4.19",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.11",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
