--- a/react/package.json
+++ b/react/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query": "^5.36.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
