--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.36.0",
+    "@types/node": "^20.12.12",
+    "@types/react-lazy-load-image-component": "^1.6.4",
     "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
@@ -18,6 +20,7 @@
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "^3.4.3"
   },
